# cloaked_spaceship

./: .gitignore  README.md  example.png.REMOVED.git-id  noxfile.py  pyproject.toml
.github/workflows/: pdoc.yml  pytest.yml
docs/pics/: example.png.REMOVED.git-id  program_logo.png.REMOVED.git-id
save/data/: spaceship_v2.zip.REMOVED.git-id
src/: helpers.py  main.py  plot_examples.py  train.py
src/ci/: utils.py
