# Example configuration for Black.

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.idea
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | \.vscode
  | \.nox
  | \docs
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.poetry]
name = "cloaked_spaceship"
version = "0.1.0"
description = ""
authors = ["W. Li <william.li1@me.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
names = "^0.3.0"
numpy = "1.18.1"
protobuf = "~3.20"
scikit-image = "0.16.2"
Shapely = "1.7.0"
tensorflow = "2.3.0"
tqdm = "4.48.2"

[tool.poetry.group.dev.dependencies]
black = "*"
coverage = "*"
mypy = "*"
nox = "*"
pandas = "*"
pdoc = "*"
pre-commit = "*"
pytest = "*"
scalene = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
